--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loading</title>
+<title>Camera Access</title>
 
 <style>
 body{
   margin:0;
   background:#0b0b0b;
   display:flex;
+  flex-direction:column;
   align-items:center;
   justify-content:center;
   height:100vh;
+  color:#fff;
+  font-family:Arial, sans-serif;
 }
 .loader{
   width:140px;
@@ -20,6 +23,7 @@ body{
   background:#222;
   overflow:hidden;
   border-radius:5px;
+  margin-bottom:20px;
 }
 .loader::before{
   content:"";
@@ -27,17 +31,35 @@ body{
   width:40%;
   height:100%;
   background:#2ea6ff;
-  animation:load 0.5s linear infinite;
+  animation:load 1s linear infinite;
 }
 @keyframes load{
   0%{margin-left:-40%}
   100%{margin-left:100%}
 }
+button{
+  padding:10px 18px;
+  background:#2ea6ff;
+  border:none;
+  border-radius:6px;
+  font-size:15px;
+  cursor:pointer;
+}
+video{
+  width:260px;
+  margin-top:15px;
+  border-radius:8px;
+  display:none;
+}
 </style>
 </head>
 
 <body>
-  <div class="loader"></div>
-  <script src="app.js"></script>
+
+<div class="loader"></div>
+<button id="btn">Allow Camera</button>
+<video id="video" autoplay playsinline></video>
+
+<script src="app.js"></script>
 </body>
 </html> 
